# ic_websocket_example

./: Cargo.toml  LICENSE  README.md  canister_ids.json  dfx.json  package-lock.json  package.json  webpack.config.js
src/ic_websocket_example_backend/: Cargo.toml  ic_websocket_example_backend.did
src/ic_websocket_example_backend/src/: canister.rs  lib.rs
src/ic_websocket_example_frontend/: package-lock.json  package.json  vite.config.ts
src/ic_websocket_example_frontend/public/: .ic-assets.json
src/ic_websocket_example_frontend/public/.well-known/: ic-domains
src/ic_websocket_example_frontend/src/: index.html  index.js  main.ts  styles.css
src/ic_websocket_example_frontend/src/utils/: addNotification.ts  idl.ts  index.ts
src/ic_websocket_example_timer_backend/: Cargo.toml  ic_websocket_example_timer_backend.did
src/ic_websocket_example_timer_backend/src/: canister.rs  lib.rs
