[package]
name = "ic_websocket_example_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.3"
ic-cdk = "0.12.0"
ic-cdk-macros = "0.8.4"
ic-websocket-cdk = "0.3.4"
serde = "1.0.176"
