[package]
name = "ic_websocket_example_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.15"
ic-cdk-macros = "0.15"
ic-websocket-cdk = "0.4.0"
serde = "1.0"
